--- a/latihan2/css/style.css
+++ b/latihan2/css/style.css
@@ -19,11 +19,8 @@ p {
   text-align: center;
 }
 
-#img {
-  width: 200px;
-  height: 200px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+#foto
+{
+  background-repeat: no-repeat;
+
 }
