--- a/latihan3/css/style51018006.css
+++ b/latihan3/css/style51018006.css
@@ -100,7 +100,7 @@ a:hover{
 
 #bg{
   background-image: url('img/bg1.jpg');
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
