--- a/latihan3/css/style51018006.css
+++ b/latihan3/css/style51018006.css
@@ -87,7 +87,7 @@ a:hover{
 }
 
 #bg{
-  background-image: url('../img/bg1.jpg');
+  background-image: url('img/bg1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
