latihan3/index.html

--- a/latihan3/css/style51018006.css
+++ b/latihan3/css/style51018006.css
@@ -8,6 +8,7 @@ body{
   font-family: sans-serif;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #fff;
 }
 
 p{
@@ -81,7 +82,8 @@ a:hover{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 20px;
   font-size: 30px;
-  color: purple;
+  color: white;
+  background-color: maroon;
   background-image: url('img/bg1.jpg');
 }
 
