latihan3/index.html br

--- a/latihan3/css/style51018006.css
+++ b/latihan3/css/style51018006.css
@@ -8,7 +8,7 @@ body{
   font-family: sans-serif;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #fff;
+  background-color: #000;
 }
 
 p{
