--- a/latihan5/css/style.css
+++ b/latihan5/css/style.css
@@ -24,7 +24,7 @@
    margin: 0;
    padding: 0;
    overflow: hidden;
-   background-color: navy;
+   background-color: pink;
    font-family: sans-serif;
    font-size: 15px;
    font-weight: bold;
@@ -40,7 +40,7 @@
    text-decoration: none;
  }
  .navigasi li a:hover{
-   background-color: navy;
+   background-color: red;
    transition-duration: 2s;
  }
 .icon-block {
@@ -54,4 +54,13 @@
 }
 .bluechef-text{
   color:#0000bf;
+}
+.collection a.collection-item {
+    color: #2d1298;
+}
+.purplechef{
+  background-color: #2d1298;
+}
+.all{
+  text-align: center;
 }
