--- a/latihan5/css/style.css
+++ b/latihan5/css/style.css
@@ -34,7 +34,7 @@
  }
  .navigasi li a{
    display: block;
-   color: white;
+   color: yellow;
    text-align: center;
    padding: 10px 20px;
    text-decoration: none;
