--- a/latihan5/css/style.css
+++ b/latihan5/css/style.css
@@ -15,8 +15,6 @@
    float:left;
    margin:5px;
    border-radius: 15px;
-   background-color: white;
-   box-shadow: 3px 3px 5px grey;
    overflow: hidden;
  }
  .navigasi ul{
@@ -43,23 +41,37 @@
    background-color: red;
    transition-duration: 2s;
  }
+ .bluechef{
+   background-color: #0000bf;
+ }
+ .bluechef-text{
+   color: #0000bf;
+ }
 .icon-block {
   padding: 0 15px;
 }
 .icon-block .material-icons {
 	font-size: inherit;
 }
-.bluechef{
-  background-color: #0000bf;
-}
-.bluechef-text{
-  color:#0000bf;
-}
 .collection a.collection-item {
-    color: #2d1298;
+    color: #0000bf;
 }
-.purplechef{
-  background-color: #2d1298;
+.collection .collection-item {
+    background-color: #fff;
+    line-height: 1.5rem;
+    padding: 10px 20px;
+    margin: 0;
+    border-bottom: 1px solid #0000bf;
+  }
+  .collection a.collection-item:not(.active):hover{
+    background-color: #f1d7f0;
+  }
+  .collection {
+    margin: .5rem 0 1rem 0;
+    border: 1px solid #0000bf;
+    border-radius: 2px;
+    overflow: hidden;
+    position: relative;
 }
 .all{
   text-align: center;
