--- a/latihan7/css/style.css
+++ b/latihan7/css/style.css
@@ -6,60 +6,70 @@
  * Made By MaterializeCSS.com
  */
 
-nav ul a,
-nav .brand-logo {
-  color: #444;
-}
-
-p {
-  line-height: 2rem;
-}
-
-.sidenav-trigger {
-  color: #26a69a;
-}
-
-.parallax-container {
-  min-height: 380px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
-}
-  .parallax-container .section {
-    width: 100%;
-  }
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-}
-
+ .blockmenu
+ {
+   width: 200px;
+   height: 150px;
+   list-style: none;
+   text-align: center;
+   float:left;
+   margin:5px;
+   border-radius: 15px;
+   overflow: hidden;
+ }
+ .navigasi ul{
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+   overflow: hidden;
+   background-color: pink;
+   font-family: sans-serif;
+   font-size: 15px;
+   font-weight: bold;
+ }
+ .navigasi li{
+   float: left;
+ }
+ .navigasi li a{
+   display: block;
+   color: yellow;
+   text-align: center;
+   padding: 10px 20px;
+   text-decoration: none;
+ }
+ .navigasi li a:hover{
+   background-color: red;
+   transition-duration: 2s;
+ }
+ .bluechef{
+   background-color: #0000bf;
+ }
+ .bluechef-text{
+   color: #0000bf;
+ }
 .icon-block {
   padding: 0 15px;
 }
 .icon-block .material-icons {
-  font-size: inherit;
+	font-size: inherit;
 }
-
-footer.page-footer {
-  margin: 0;
+.collection a.collection-item {
+    color: #0000bf;
 }
-
-.bluechef{
-  background-color: #0000BF;
-}
-
-.bluechef-text{
-  color: #0000BF;
+.collection .collection-item {
+    background-color: #fff;
+    line-height: 1.5rem;
+    padding: 10px 20px;
+    margin: 0;
+    border-bottom: 1px solid #0000bf;
+  }
+  .collection a.collection-item:not(.active):hover{
+    background-color: #f1d7f0;
+  }
+  .collection {
+    margin: .5rem 0 1rem 0;
+    border: 1px solid #0000bf;
+    border-radius: 2px;
+    overflow: hidden;
+    position: relative;
 }
